--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,1 @@
-app.data.input=/media/ryan/FC4E37634E3715BC/DBPedia/JSONDump-master/data/article*.ttl.*
+app.data.input=/media/ryan/FC4E37634E3715BC/DBPedia/JSONDump/data/sample.ttl
