--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         <scalatest.scala.version>2.11</scalatest.scala.version>
         <scalatest.version>2.2.4</scalatest.version>
         <scala.compiler.Xmx>-Xmx1024m</scala.compiler.Xmx>
+        
+        <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
+        <scoverage.scalacPluginVersion>1.3.0</scoverage.scalacPluginVersion>
+        <scoverage.aggregate>true</scoverage.aggregate>
+    	<dependency.locations.enabled>false</dependency.locations.enabled>
+    	
         <!--<skipTests>true</skipTests>-->
     </properties>
 
@@ -166,4 +172,23 @@
 
         </plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.scoverage</groupId>
+				<artifactId>scoverage-maven-plugin</artifactId>
+				<version>${scoverage.plugin.version}</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report</report>
+							<!-- or <report>integration-report</report> -->
+							<!-- or <report>report-only</report> -->
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
